# fxoanda

./: .gitignore  Cargo.toml  README.md
examples/: endpoints.rs
fxoanda_definitions/: Cargo.toml
fxoanda_definitions/src/: lib.rs
fxoanda_serdes/: Cargo.toml
fxoanda_serdes/src/: lib.rs
fxoanda_serdes/src/serdates/: mod.rs
fxoanda_serdes/src/serfloats/: mod.rs
src/: account.rs  client.rs  instrument.rs  lib.rs  pricing.rs
tools/: commands.txt  gen.py  v20.json
tools/tmpl/: request_builder.tmpl
