[package]
name = "fxoanda"
version = "0.1.3"
authors = ["James McGill <jbmcgill@gmail.com>"]
description = "Library to conduct currency conversion with the Oanda API"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11.9", features = ["blocking","json"]}
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = "1.0.83"
serde_derive = "1.0.83"
chrono = {version = "0.4.6", features = ["serde"] }
time = "0.3.6"
fxoanda_definitions = {path = "fxoanda_definitions/", version="0.1.0"}
fxoanda_serdes = {path = "fxoanda_serdes/", version="0.1.0"}


